style.css
body {
  background-color: #d1bbc8;
  font-family: monospace;
  display: flex;
  align-items: center;
  justify-content: center;
  /* flex-shrink: 1 */
}

#content {
  min-height: 1000px;
  padding: 5px 30px 15px 30px;
  background-color: #fad8c1;
  filter: drop-shadow(5px 5px 3px #b69ea8);
  display: flex;
  flex-direction: column;
  align-content: center;
  /* flex-grow: 1; */
}

#banner {
  width: 900px;
  margin-bottom: 15px;
  background: linear-gradient(#ccc 5%, transparent 1%),
    linear-gradient(90deg, #ddd 5%, transparent 1%)1px 0, #f0faee;
  background-size: 22px 22px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-shrink: 1;
  filter: drop-shadow(7px 7px 3px #bbb);
}

h1 {
  font-size: 70px;
}

#banner-align {
  display:flex;
  align-items: center;
  justify-content: center;
}

.info {
  font-family: sans-serif;
}

#description {
  padding-top: 15px;
  padding-bottom: 15px;
}

#instructions {
  padding: 10px;
}

ul {
  list-style: none;
  padding-left: 10px;
  display: flex;
  flex-direction: column;
  align-items: space-between;
  gap: 10px;
}

